# py-proc

./: .gitignore  README.md  check_processability.py  detect_display_states.py  helpers.py  pre_proc.py  procThalamus_indie.py  proc_display.py  proc_events.py  proc_reach.py  pyproject.toml  requirements.txt  run_day_pipeline.py  save_trials.py
proc_gui/: README.md  __init__.py  app.py  run_gui.py
pyCheck/: README.md  __init__.py  cross_day_kinematics.py  cross_day_kinematics_plots.py  cross_day_plots.py  day_behavior_metrics.py  day_presentation_plots.py  display_behave.py  joystick_validation.py  kinematics_features.py  plot_utils.py  run_joystick_validation.py
pyReplay/: README.md  __init__.py  __main__.py  blit.py  cameras.py  cursor.py  export.py  loader.py  panels.py  player.py  run_replay.py  window.py
py_proc/: __init__.py  helpers.py  pre_proc.py  procThalamus_indie.py  proc_events.py  proc_eye.py  proc_hand.py  proc_saccade.py  run_day_pipeline.py
