[project]
name = "py_proc_alexrig"
version = "0.0.1"
dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["py_proc/*"]

[tool.hatch.build.targets.wheel]
packages = ["py_proc"]

[tool.hatch.build.targets.sdist]
exclude = ["*venv*"]

